jumping screen fix -test2

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,6 +126,7 @@
   html {
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
+    height: 100%;
   }
 
   body {
@@ -134,6 +135,7 @@
     overflow-x: hidden;
     position: relative;
     min-height: 100vh;
+    height: 100%;
   }
 }
 
